# vacuum-world

./: README.md  stack.yaml  vacuum-world.cabal
src/: Main.hs
