name:                vacuum-world
version:             0.1.0.0
synopsis:            Vacuum world
homepage:            https://github.com/qsctr/vacuum-world
license:             MIT
author:              Bretton
build-type:          Simple
cabal-version:       >=1.10

executable vacuum-world
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , gloss
                     , gloss-juicy
                     , pretty-show
                     , process
  ghc-options:         -Wall -threaded -fno-warn-incomplete-patterns
